--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
     <title>QUnit</title>
     <script src="//code.jquery.com/jquery-1.4.min.js"></script>
     <script src="//code.jquery.com/qunit/qunit-1.16.0.js"></script>
-    <script src="../jquery-webstorage.js"></script>
+    <script src="../src/jquery-webstorage.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.16.0.css">
 </head>
 <body>
